# slfd

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
data/: README.md
experiments/: README.md
experiments/efd2_fusion/: run.py  run_diagnostics.py
results/: README.md
src/slfd/: __init__.py  decay.py  decision.py  fusion.py  metrics.py  opinion.py  results.py  robust.py  strategies.py  synthetic.py  trust.py
src/slfd/data/: ieee_cis.py
src/slfd/experiments/: __init__.py  diagnose_efd2.py  efd1.py  efd2.py  tune_decider.py
src/slfd/models/: __init__.py  ensemble.py
tests/: test_decay.py  test_decision.py  test_diagnose_efd2.py  test_efd1.py  test_efd2.py  test_fusion.py  test_ieee_cis.py  test_if_calibration.py  test_metrics.py  test_models.py  test_opinion.py  test_results.py  test_robust.py  test_smoke.py  test_strategies.py  test_synthetic.py  test_trust.py  test_trust_strategies.py  test_tune_decider.py
