[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slfd"
version = "0.1.0"
description = "Subjective Logic Fraud Detection: Uncertainty-Native Multi-Source Signal Fusion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Muntaser Syed" },
    { name = "Marius Silaghi" },
    { name = "Sheikh Abujar" },
    { name = "Rwaida Alssadi" },
]
keywords = [
    "fraud-detection",
    "subjective-logic",
    "uncertainty-quantification",
    "multi-source-fusion",
    "evidence-theory",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "scipy>=1.11",
]
viz = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
]
jsonld = [
    "jsonld-ex>=0.6.6",
]
all = [
    "slfd[ml,viz,jsonld]",
]
dev = [
    "slfd[all]",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/jemsbhai/slfd"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "experiment: marks tests as experiment runners",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.coverage.run]
source = ["slfd"]

[tool.coverage.report]
show_missing = true
fail_under = 90
